      - New methods begin() and end().
    - cache/binaryversion:
      - [API break] Fields 'shortDescription' and 'longDescription' are
        replaced with a new field 'description'.
      - [API break] 'parseFromFile': removed.
    - cache/sourceversion:
      - [API break] 'parseFromFile': removed.
    - cache/sourcepackage:
      - New methods begin() and end().
    - file:
      - [API break] Not a public API anymore.
    - system/state:
      - New method 'getArchitecture'.
    - download/manager:
      - Removed 'alive pings'.
    - download/method{,factory}:
      - [API break]: don't require shared_ptr< Config > anymore.
  * doc:
    - tutorial:
      - In the man page version, all command examples are now marked bold.
    - man/cupt.1:
      - Fixed the typo: suffix -> prefix in the 'pkgnames' command.
        (Closes: #689518)
  * debian:
    - control:
      - Bumped the library API version.
  * build system:
    - Specify OUTPUT_NAME property for targets. As a side effect this
      obsoletes the custom cupt.bin install statement which prevented 'make
      install' from working for out-of-tree builds. (Closes: #683872)
    - doc:
      - Fixed 'make install' for out-of-tree builds.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 08 Apr 2012 10:59:48 +0300

cupt (2.5.9) unstable; urgency=low

  * lib:
    - download/uri:
      - Constructor: accept single- or triple-slashes after the ':' character,
        which is the usual situation for 'file' or 'copy' schemes.
        Thanks to Alexey Ivanov for the report. (Closes: #683873)
    - system/nativeresolver:
      - Fixed 'internal error: conflicting elements' in the corner case when
        one version of package A depends on a certain version which in turn
        depends on a different version of package A, plus additional
        circumstances apply.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 15 Aug 2012 19:45:35 +0300

cupt (2.5.8) unstable; urgency=low

  * lib: