@@ -90,6 +90,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - [API break] 'parseFromFile': removed.
     - cache/sourcepackage:
       - New methods begin() and end().
+      - Stopped filtering out packages with unapplicable binary architectures.
     - file:
       - [API break] Not a public API anymore.
     - system/state:
